# AILitResearchOntoPipe

./: README.md
literature-cortex/: LICENSE  README.md  SKILL.md  pyproject.toml
literature-cortex/lcortex/: __init__.py  cli.py
literature-cortex/lcortex/analysis/: __init__.py  builtin_scorers.py  dry_scorer.py  scorer.py  scoring.py
literature-cortex/lcortex/core/: __init__.py  config.py  engine.py  engine_legacy.py  resources.py  state.py
literature-cortex/lcortex/export/: __init__.py  language.py  obsidian.py  transfer_index.py
literature-cortex/lcortex/graph/: __init__.py  edge.py  schema.sql  store.py
literature-cortex/lcortex/intelligence/: __init__.py  base.py  factory.py
literature-cortex/lcortex/intelligence/adapters/: __init__.py  claude.py  deepseek.py  noop.py  ollama.py  openai.py
literature-cortex/lcortex/monitor/: __init__.py  monitor.py  run_controller.py
literature-cortex/lcortex/ontology/: __init__.py  distillation.py  engine.py  evolution.py
literature-cortex/lcortex/prompts/: __init__.py  loader.py  stage_b_scoring.md  stage_c_d_search.md  stage_e_synthesis.md  stage_f2_divergence.md  stage_f_structure.md
literature-cortex/lcortex/review/: __init__.py  search_query.py  synthesizer.py
literature-cortex/lcortex/search/: __init__.py  adapter.py  arxiv.py  dedup.py  multi_level.py  openalex.py  stream.py
literature-cortex/lcortex/seeds/: ONTOLOGY_GUIDE.md  README.md  __init__.py  loader.py  manager.py  seed_L0_meta.json  seed_L1_axioms.json  seed_L2_math.json  seed_L3_methods.json  seed_L4_physics.json
literature-cortex/lcortex/seeds/meta/: control_policy.json
literature-cortex/lcortex/structure/: __init__.py  deconstructor.py  extractor.py  lite_matcher.py
